-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u231, jfx13
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8232803 | jfx11.0.5 | Arunprasad Rajkumar | P3 | Closed | Fixed | |
| JDK-8227386 | 8u241 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b01 |
| JDK-8227747 | 8u231 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b03 |
- backported by
-
JDK-8227386 Cherry pick GTK WebKit 2.24.3 changes
-
- Resolved
-
-
JDK-8227747 Cherry pick GTK WebKit 2.24.3 changes
-
- Resolved
-
-
JDK-8232803 Cherry pick GTK WebKit 2.24.3 changes
-
- Closed
-
- relates to
-
JDK-8219362 Update to 608.1 version of WebKit
-
- Resolved
-