8227079: Cherry pick GTK WebKit 2.24.3 changes

Reviewed-by: kcr, jvos